[gd_scene load_steps=16 format=3 uid="uid://2b4h3y4coixp"]

[ext_resource type="Script" path="res://Scripts/Enemies/Basic/EnemyStateMachine.gd" id="1_yx264"]
[ext_resource type="Script" path="res://Scripts/Enemies/States/StateMachine.gd" id="2_xmu0h"]
[ext_resource type="Texture2D" uid="uid://blf5uhauqockv" path="res://Assets/Sprite-0002.png" id="2_yewup"]
[ext_resource type="Script" path="res://Scripts/Enemies/States/IdleStateEnemy.gd" id="3_2q62h"]
[ext_resource type="Script" path="res://Scripts/Enemies/States/HurtStateEnemy.gd" id="5_1javx"]
[ext_resource type="Script" path="res://Scripts/Enemies/States/ChaseStateEnemy.gd" id="6_75hs7"]

[sub_resource type="Animation" id="Animation_yy3qp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_phman"]
resource_name = "attack"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_fbscx"]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [9]
}

[sub_resource type="Animation" id="Animation_sbm2v"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}

[sub_resource type="Animation" id="Animation_oyy5w"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u6d8u"]
_data = {
"RESET": SubResource("Animation_yy3qp"),
"attack": SubResource("Animation_phman"),
"hurt": SubResource("Animation_fbscx"),
"idle": SubResource("Animation_sbm2v"),
"walk": SubResource("Animation_oyy5w")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_wbpai"]
size = Vector3(1, 2, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6ojwk"]
radius = 3.9246

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_i66h1"]
points = PackedVector3Array(0, 1, 0, 0.194988, -1, -0.980814, 0, -1, -1, -0.195184, -1, -0.980814, -0.382733, -1, -0.924041, -0.555599, -1, -0.831637, -0.707126, -1, -0.707126, -0.831637, -1, -0.555599, -0.924041, -1, -0.382733, -0.980814, -1, -0.195184, -1, -1, -0.000195742, -0.980814, -1, 0.194988, -0.924041, -1, 0.382537, -0.831637, -1, 0.555403, -0.707126, -1, 0.70693, -0.555599, -1, 0.831441, -0.382733, -1, 0.923845, -0.195184, -1, 0.980619, -0.000195742, -1, 1, 0.194988, -1, 0.980619, 0.382537, -1, 0.923845, 0.555403, -1, 0.831441, 0.70693, -1, 0.70693, 0.831441, -1, 0.555403, 0.923845, -1, 0.382537, 0.980619, -1, 0.194988, 1, -1, -0.000195742, 0.980619, -1, -0.195184, 0.923845, -1, -0.382733, 0.831441, -1, -0.555599, 0.70693, -1, -0.707126, 0.555403, -1, -0.831637, 0.382537, -1, -0.924041)

[node name="Enemy" type="CharacterBody3D" groups=["enemies"]]
floor_constant_speed = true
script = ExtResource("1_yx264")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u6d8u")
}

[node name="LineOfSight" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -100)
debug_shape_custom_color = Color(0.980392, 0, 0, 1)

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("BoxShape3D_wbpai")

[node name="NavigationAgent3d" type="NavigationAgent3D" parent="."]
target_desired_distance = 2.0
path_height_offset = 1.0
avoidance_enabled = true
radius = 2.0
debug_enabled = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
pixel_size = 0.05
billboard = 2
texture_filter = 0
texture = ExtResource("2_yewup")
hframes = 10
vframes = 8

[node name="SoundArea" type="Area3D" parent="."]
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="SoundArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("CylinderShape3D_6ojwk")

[node name="VisionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.19964)
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, -5, 0, 5, -2.18557e-07, 0, 1.50114, -0.91419)
shape = SubResource("ConvexPolygonShape3D_i66h1")

[node name="VisionTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_xmu0h")
initial_state = NodePath("Chase")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("3_2q62h")
enemy = NodePath("../..")

[node name="Hurt" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_1javx")
enemy = NodePath("../..")

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_75hs7")
enemy = NodePath("../..")

[node name="Steering" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="0" type="RayCast3D" parent="Steering"]
target_position = Vector3(0, 0, -5)

[node name="1" type="RayCast3D" parent="Steering"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)
target_position = Vector3(0, 0, -5)

[node name="2" type="RayCast3D" parent="Steering"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, 0, -5)

[node name="3" type="RayCast3D" parent="Steering"]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 0, 0, 0)
target_position = Vector3(0, 0, -5)

[node name="4" type="RayCast3D" parent="Steering"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
target_position = Vector3(0, 0, -5)

[node name="5" type="RayCast3D" parent="Steering"]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 0, 0, 0)
target_position = Vector3(0, 0, -5)

[node name="6" type="RayCast3D" parent="Steering"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)
target_position = Vector3(0, 0, -5)

[node name="7" type="RayCast3D" parent="Steering"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0)
target_position = Vector3(0, 0, -5)

[connection signal="target_reached" from="NavigationAgent3d" to="StateMachine/Chase" method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3d" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="target_reached" from="StateMachine/Chase" to="StateMachine" method="_on_chase_target_reached"]
